fixed spacing issues (#246)
:+1:

--- a/src/styles/homepage/footer.module.scss
+++ b/src/styles/homepage/footer.module.scss
@@ -50,6 +50,7 @@
             width: 100%;
         }
     }
+
     @include mixins.phone {
         flex-direction: column;
         display: flex;
@@ -57,6 +58,10 @@
         align-items: center;
         gap: 10px;
         row-gap: 32px;
+    }
+
+    @include mixins.sm-phone {
+        padding: 16px 0;
     }
 }
 
