--- a/src/styles/homepage/grow.module.scss
+++ b/src/styles/homepage/grow.module.scss
@@ -13,8 +13,7 @@
 
         @include mixins.tablet {
             width: 100%;
-            margin-right: 24px;
-            margin-left: 24px;
+            padding: 0 24px;
         }
     }
 }
@@ -39,9 +38,8 @@
 
 .main_content {
     border-right: 1px solid var(--Gray, #D0D0D0);
-    padding-right: 32px;
 
-    @include mixins.phone {
+    @include mixins.tablet {
         border-right: none;
     }
 }
