--- a/src/styles/navbar/navbar.module.scss
+++ b/src/styles/navbar/navbar.module.scss
@@ -58,12 +58,6 @@
   }
 
   @include mixins.phone {
-    .navbar {
-      width: calc(100% - 2 * var(--edge-spacer) * 0.2);
-    }
-  }
-
-  @include mixins.sm-phone {
     top: var(--navbar-spacer-mobile);
     touch-action: none;
 
